@@ -47,27 +47,27 @@
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../qml/pages/AddAccountPage.qml" line="143"/>
+        <location filename="../qml/pages/AddAccountPage.qml" line="150"/>
         <source>Currency</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../qml/pages/AddAccountPage.qml" line="175"/>
+        <location filename="../qml/pages/AddAccountPage.qml" line="182"/>
         <source>Attention! If you set up an account to currencies other than the default currency in settings, then this account does not appear in the chart or cover.</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../qml/pages/AddAccountPage.qml" line="187"/>
+        <location filename="../qml/pages/AddAccountPage.qml" line="194"/>
         <source>Starting Balance</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../qml/pages/AddAccountPage.qml" line="188"/>
+        <location filename="../qml/pages/AddAccountPage.qml" line="195"/>
         <source>Enter start saldo</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../qml/pages/AddAccountPage.qml" line="196"/>
+        <location filename="../qml/pages/AddAccountPage.qml" line="203"/>
         <source>Saldo %1</source>
         <translation type="unfinished"></translation>
     </message>
